examples/test/testpolicy18647.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18647
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key40: value42
      key25: value17
      key20: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value32
          key39: value24
      podSelector:
        matchLabels:
          key3: value32
          key37: value32
          key9: value49
